cmake_minimum_required(VERSION 3.17)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

#add_executable(stringstream stringstream.cpp)
add_executable(rectangle_area rectangle_area.cpp)
#add_executable(strings strings.cpp )
#add_executable(struct struct.cpp )
#add_executable(classes classes.cpp)
#add_executable(classesandobjects classesandobjects.cpp )
#add_executable(vector_sort vector_sort.cpp multilevel_inheritance.cpp)
#add_executable(magicspells magicspells.cpp)
#add_executable(multilevel_inheritance multilevel_inheritance.cpp)
#add_executable(vector_erase vector_erase.cpp)
#add_executable(operator_overloading operator_overloading.cpp)
#add_executable(inheritedcode inheritedcode.cpp)