cmake_minimum_required(VERSION 3.17)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

#add_executable(untitled variable_array.cpp)
#add_executable(untitled stringstream.cpp)
#add_executable(untitled strings.cpp )
#add_executable(untitled struct.cpp )
#add_executable(untitled classes.cpp)
#add_executable(untitled classesandobjects.cpp )
#add_executable(untitled vector_sort.cpp multilevel_inheritance.cpp)
#add_executable(untitled magicspells.cpp)
#add_executable(untitled multilevel_inheritance.cpp)
#add_executable(untitled vector_erase.cpp\)
#add_executable(untitled operator_overloading.cpp )
#add_executable(untitled boxit.cpp)
#add_executable(untitledne  print_pretty.cpp)
#add_executable(untitled  virtual_functions.cpp)
#add_executable(untitled messages_order.cpp)
#add_executable(untitled   accessing_inherited_functions.cpp)
#add_executable(untitled  hotel_prices.cpp)
#add_executable(untitled cpp_class_templates.cpp)
#add_executable(untitled inheritedcode.cpp)
add_executable(untitled operator_overloading_matrix.cpp)